tests/baselines/reference/bigint-numeric-separator-literal-oil-nsl-od-dunder-err.errors.txt
bigint-numeric-separator-literal-oil-nsl-od-dunder-err.ts(43,5): error TS6189: Multiple consecutive numeric separators are not permitted.


==== bigint-numeric-separator-literal-oil-nsl-od-dunder-err.ts (1 errors) ====
    // Copyright (C) 2019 Leo Balter. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-NumericLiteralSeparator
    description: >
      NumericLiteralSeparator may not appear adjacent to another
      NumericLiteralSeparator in a OctalIntegerLiteral
    info: |
      NumericLiteral ::
        DecimalIntegerLiteral BigIntLiteralSuffix
        NumericLiteralBase BigIntLiteralSuffix
    
      NumericLiteralBase ::
        BinaryIntegerLiteral
        OctalIntegerLiteral
        HexIntegerLiteral
    
      BigIntLiteralSuffix :: n
    
      NumericLiteralSeparator ::
        _
    
      OctalIntegerLiteral ::
        0o OctalDigits
        0O OctalDigits
    
      OctalDigits ::
        OctalDigit
        OctalDigits OctalDigit
        OctalDigits NumericLiteralSeparator OctalDigit
    
      OctalDigit :: one of
        0 1 2 3 4 5 6 7
    
    negative:
      phase: parse
      type: SyntaxError
    features: [BigInt, numeric-separator-literal]
    ---*/
    
    
    0o0__0n;
        ~
!!! error TS6189: Multiple consecutive numeric separators are not permitted.
    